@uppy/dashboard - fix for file previews being partially invisible sometimes in safari

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -781,6 +781,9 @@ a.uppy-Dashboard-poweredBy {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  // Fixes file previews being partially invisible in safari (for some pics only).
+  // (https://stackoverflow.com/a/27971913/3192470)
+  transform: translateZ(0);
 }
 
 
